# paquete-cib-pablopy

./: README.txt  pyproject.toml
src/: modulecio.py
src/CIBPablopyPacket.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
