[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "CIBPablopyPacket"
version = "0.0.1"
authors = [
{ name="Pablo Gimeno Hermán", email="pgimher@upv.edu.es" },
]
description = 'CIBPacket is a dummy module'
readme = "README.txt"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/pypa/CIBProject"
Issues = "https://github.com/pypa/CIBProject/issues"
